--- a/README
+++ b/README
@@ -1,25 +1,58 @@
-Tema realizata de Theodor Vulpe - 315CB
+# 🧩 IOCLA – Tema 2 (2025)
 
-Task 1:
+Assembly-based solutions to low-level computing problems, designed to deepen understanding of memory access, bitwise manipulation, control flow, and performance-oriented logic using x86 instructions.
 
-Adaug in array-ul destinatie doar numerele care indeplinesc conditiile. Pentru a verifica daca un numar x este putere a lui 2, folosesc proprietatea ca x & (x-1) = 0
+📄 **Assignment repository:** [gitlab.cs.pub.ro/iocla/tema-2-2025](https://gitlab.cs.pub.ro/iocla/tema-2-2025)  
+👨‍💻 **Author:** Theodor Vulpe – 315CB
 
-Task 2:
+---
 
-- subtask 1:
+## ✅ Task Overview
 
-Verific daca anul, respectiv luna se afla in intervalele corecte, iar in caz contrar sar la un label specific invalid_date. Pentru a verifica daca ziua este corecta, aflu prima data luna corespunzatoare numarului ei si numarul sau de zile.
+### 🔹 Task 1 – Filter Powers of Two
 
-- subtask 2:
+Store only those values from a source array into a destination array **if they are powers of two**.
 
-Asemanator codului corespunzator in C, folosesc doua loop-uri, iar ambele au cate ecx pasi (ecx fiind lungimea array-ului). Pentru a interschimba doua evenimente, ma folosesc de faptul ca dimensiunea structurii este de 36 bytes, care este divizibil cu 4, deci pot interschimba cate un dword o data, de 9 ori in total. Pentru a compara numele a doua evenimente, fac un loop prin care trec prin fiecare pereche de caractere pana trebuie facut swap sau se ajunge la final. 
+- Uses the bitwise identity:  
+x & (x - 1) == 0 ⟹ x is a power of 2
 
-Task 3: Initial aflu numarul de grupari de cate 3 bytes. Apoi calculez lungimea destinatiei si o pun in pointerul dat. Intr-un loop, iau fiecare grup de 3 bytes si formez noua grupare shiftand de fiecare data bitii la stanga pentru a face loc noului caracter. Dupa ce am format noua grupare, pentru fiecare din cele 4 perechi de cate 6 biti, shiftez la dreapta pentru a obtine grupa dorita si o izolez folosind o masca. Adaug fiecare caracter encodat la destinatie.
+- Skips zero explicitly, since 0 & -1 == 0 but 0 is not a power of 2.
 
-Task 4: Folosesc doua loop-uri, unul care trece prin toate cifrele de la 1 la 9 iar celalalt care cauta cifra pe rand/coloana. Cand am gasit cifra in cel de-al doilea loop, verific daca este marcata ca deja gasita. In caz afirmativ, inseamna ca avem o dublura si randul/coloana este gresit/a. La finalul cautarii unei cifre, daca nu a fost gasita deloc, din nou, este gresit. Diferenta dintre implementarea check_row si check_column consta in faptul ca la check_row obtin de la inceput un pointer catre inceputul randului respectiv pentru a usura operatiile, iar la check_column inmultesc de fiecare data linia curenta cu numarul de coloane si adaug coloana respectiva pentru a obtine cifra curenta. Nu am abordat check_box.
+---
 
+### 🔹 Task 2 – Event Validator & Sorter
 
+#### 📅 Subtask 1: Validate Date
 
+- Validates year and month using range checks.
+- Uses `invalid_date` label for any invalid component.
+- Looks up the maximum number of days based on the month.
+- Checks that the day fits within that range.
 
+#### 🔁 Subtask 2: Sort Events by Name
 
+- Implements a **bubble sort**-style double loop.
+- Uses `ecx` for array length.
+- Each event struct is **36 bytes**, allowing safe `DWORD` (4-byte) swapping in 9 steps.
+- Compares event names character-by-character to determine sort order.
 
+---
+
+### 🔹 Task 3 – Base64 Encoding (Manual Implementation)
+
+- Computes number of 3-byte groups to encode.
+- Constructs each 24-bit group by shifting and combining 3 input bytes.
+- Splits 24-bit group into four 6-bit values via right shifts and masks.
+- Encodes each 6-bit value as its corresponding Base64 character.
+- Writes result into destination array and stores final size via pointer.
+
+---
+
+### 🔹 Task 4 – Sudoku Row & Column Checker
+
+- Iterates digits 1–9 for each row/column.
+- For each digit, checks if it appears **exactly once**.
+- Uses a flag array to track duplicates.
+- If digit is missing or duplicated → row/column is invalid.
+- `check_row`: computes row pointer once.
+- `check_column`: computes index dynamically via `(row * cols + col)`.
