--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Assembly-based solutions to low-level computing problems, designed to deepen understanding of memory access, bitwise manipulation, control flow, and performance-oriented logic using x86 instructions.
 
-📄 **Assignment repository:** [gitlab.cs.pub.ro/iocla/tema-2-2025](https://gitlab.cs.pub.ro/iocla/tema-2-2025)  
+📄 **Assignment repository:** https://gitlab.cs.pub.ro/iocla/tema-2-2025  
 👨‍💻 **Author:** Theodor Vulpe – 315CB
 
 ---
